# C-Step-Counter

./: .gitignore  CMakeLists.txt  CMakeLists.txt.old  LICENSE  readme.md
include/: StepCountingAlgo.h  detectionStage.h  filterStage.h  postProcessingStage.h  preProcessingStage.h  ringbuffer.h  scoringStage.h  utils.h
src/: StepCountingAlgo.c  detectionStage.c  filterStage.c  postProcessingStage.c  preProcessingStage.c  ringbuffer.c  scoringStage.c
